<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/imageView"
        android:paddingTop="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/act_other"
        android:contentDescription="@string/mood" />

    <TextView
        android:id="@+id/date_time"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/date_format" />

    <TextView
        android:id="@+id/textAct"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:textColor="@color/colorLightBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="left"
        android:text="@string/null_txt"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:gravity="left"
        android:paddingBottom="5dp"
        android:text="@string/notes"
        tools:ignore="RtlHardcoded" />

</LinearLayout>