<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/sea"
    tools:context=".Fragments_SignLogRes.SignIn"
    tools:visibility="visible">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:layout_height="80dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:textColor="@color/colorLightBlue"
        android:text="@string/moodcare"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/sign"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/enter_firstName"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/enter_lastName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginLeft="90dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/star"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="90dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/enter_email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="380dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginLeft="90dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/star"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="90dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:autofillHints=""
        android:hint="@string/enter_password"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="570dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginLeft="270dp"
        android:text="@string/starMust"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="270dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:shadowDx="5"
        android:layout_marginTop="180dp"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:text="@string/save_button"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:visibility="invisible" />

</FrameLayout>
